@@ -29,6 +29,7 @@ Version 2.0
 * Improved function/variable naming to indicate explicitly where some def names are used
 * Vex loading error messages are slightly more useful
 * Adapt to difxio changes where data source info was moved from antenna into datastream
+* Support default ANTENNA setup in .v2d file
 
 Version 0.3
 ~~~~~~~~~~~
